<?xml version="1.0"?>
<package format="2">
  <name>paraminf</name>
  <version>0.9.0</version>
  <description>The paraminf package</description>

  <maintainer email="biemueller@sim.tu-darmstadt.de">Felix Biemüller</maintainer>

  <license>MIT</license>

  <author email="biemueller@sim.tu-darmstadt.de">Felix Biemüller</author>
  <author email="stumpf@sim.tu-darmstadt.de">Alexander Stumpf</author>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>gtest</test_depend>

  <doc_depend>doxygen</doc_depend>

</package>
